# YOLO-Ndjson-Zip

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  codecov.yml  index.html  install.sh  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: auto-tag.yml  ci.yml  release.yml  update-homebrew-cask.yml
scripts/: tauri.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: downloader.rs  lib.rs  main.rs  parser.rs
src-tauri/src/converter/: coco.rs  createml.rs  mod.rs  pascal_voc.rs  yolo.rs
src/components/: converter-header.tsx  converter-screen.tsx  format-button.tsx  update-checker.tsx  welcome-screen.tsx
src/components/ui/: progress.tsx
src/hooks/: use-converter.ts
src/hooks/__tests__/: use-converter.test.ts
src/lib/: types.ts
src/test/: setup.ts
