[package]
name = "ndjson-converter"
version = "0.1.0"
description = "NDJSON to ML Annotation Format Converter"
authors = ["amanharshx"]
license = "MIT"
repository = "https://github.com/amanharshx/yolo-ndjson-zip"
edition = "2021"

[lib]
name = "ndjson_converter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
