[package]
name = "ndjson-converter"
version = "0.2.0"
description = "NDJSON to ML Annotation Format Converter"
authors = ["amanharshx"]
license = "MIT"
repository = "https://github.com/amanharshx/yolo-ndjson-zip"
edition = "2021"

[lib]
name = "ndjson_converter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
zip = "2"
quick-xml = { version = "0.36", features = ["serialize"] }
futures = "0.3"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
